<resources>
    <string name="app_name">DragDropGame</string>
    <string name="restart">Restart</string>

    <string name="score">Score: %d</string>
    <string name="level">Level: %d</string>
    <string name="time_left">Time left: %d</string>

    <string name="main_menu">Main Menu</string>
    <string name="next_level">Next Level</string>
    <string name="retry">Retry</string>


    <string name="main_menu_start_new_game">Start new game</string>
    <string name="main_menu_stats">Stats</string>
    <string name="main_menu_resume_game">Resume where you left off</string>
    <string name="main_menu_no_internet">It appears you\'re not connected to the internet. Your data will be synced later with the server and might not
    show  up in the global stats for now</string>



    <string name="stats_your_highscores">Your highscores: </string>

    <string name="menu_next_level">Next Level: %s</string>
    <string name="menu_current_score">Current Score: %s</string>


    <string name="congrats_message">Congrats! You finished the game! Try again for a better score!</string>

</resources>
