<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="apps.smoll.dragdropgame.features.game.inbetween.InBetweenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/containerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:text="@{String.format(@string/score, viewmodel.levelStats.totalScore)}"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toTopOf="@id/containerView"
            tools:text="Score: 25" />

        <TextView
            android:id="@+id/levelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@{String.format(@string/level, viewmodel.levelStats.levelToBePlayed)}"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toBottomOf="@id/scoreTextView"
            tools:text="`Next Level: 3" />


        <Button
            android:id="@+id/nextLevelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/next_level"
            android:visibility="@{viewmodel.levelStats.wonCurrentLevel ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="@id/containerView"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toBottomOf="@id/mainMenuButton" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/retry"
            android:visibility="@{viewmodel.levelStats.wonCurrentLevel ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@id/containerView"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toBottomOf="@id/mainMenuButton" />

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/main_menu"
            app:layout_constraintBottom_toBottomOf="@id/containerView"
            app:layout_constraintEnd_toEndOf="@id/containerView"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toTopOf="@id/containerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>