<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerView"
    android:layout_width="match_parent"
    android:padding="@dimen/standard_margin"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@id/containerView"
        app:layout_constraintTop_toTopOf="@id/containerView"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:text="Score: 25"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@id/containerView"
        app:layout_constraintTop_toBottomOf="@id/scoreTextView"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:text="Level: 3"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/timeLeftTextView"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/containerView"
        app:layout_constraintTop_toTopOf="@id/containerView"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:text="time left: 9 seconds"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/dragImageView"
        android:layout_width="150px"
        android:layout_height="150px"
        android:src="@drawable/ic_circle"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/mainMenuButton"
        app:layout_constraintEnd_toEndOf="@id/containerView"
        app:layout_constraintStart_toStartOf="@id/containerView" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/main_menu"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/containerView"
        app:layout_constraintBottom_toBottomOf="@id/containerView"
        app:layout_constraintEnd_toEndOf="@id/containerView"
        app:layout_constraintStart_toStartOf="@id/containerView" />

    <Button
        android:id="@+id/nextLevelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/next_level"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/mainMenuButton"
        app:layout_constraintEnd_toEndOf="@id/containerView"
        app:layout_constraintStart_toStartOf="@id/containerView" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/mainMenuButton"
        app:layout_constraintEnd_toEndOf="@id/containerView"
        app:layout_constraintStart_toStartOf="@id/containerView" />
</androidx.constraintlayout.widget.ConstraintLayout>