<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="apps.smoll.dragdropgame.features.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/containerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/levelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@{String.format(@string/level, viewmodel.currentLevel)}"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toBottomOf="@id/containerView"
            tools:text="Level: 3" />

        <TextView
            android:id="@+id/timeLeftTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:text="@{String.format(@string/time_left, viewmodel.secondsLeft)}"
            app:layout_constraintEnd_toEndOf="@id/containerView"
            app:layout_constraintTop_toTopOf="@id/containerView"
            tools:text="time left: 9 seconds" />

        <ImageView
            android:id="@+id/dragImageView"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toTopOf="@id/mainMenuButton"
            app:layout_constraintEnd_toEndOf="@id/containerView"
            app:layout_constraintStart_toStartOf="@id/containerView" />

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/main_menu"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/containerView"
            app:layout_constraintEnd_toEndOf="@id/containerView"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toTopOf="@id/containerView" />

        <Button
            android:id="@+id/nextLevelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/next_level"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/containerView"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toBottomOf="@id/mainMenuButton" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/retry"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/containerView"
            app:layout_constraintStart_toStartOf="@id/containerView"
            app:layout_constraintTop_toBottomOf="@id/mainMenuButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>